infra-apps/traefik-kourier-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: kourier-system
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: knative-headers
  namespace: kourier-system
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: knative-apps-http
  namespace: kourier-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`benedict-aryo.com`) || Host(`pdf.benedict-aryo.com`) || Host(`wa-notif.benedict-aryo.com`) || Host(`matius.benedict-aryo.com`)
      kind: Rule
      priority: 10
      middlewares:
        - name: redirect-to-https
      services:
        - name: kourier
          port: 80
          namespace: kourier-system
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: knative-apps-https
  namespace: kourier-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`benedict-aryo.com`) || Host(`pdf.benedict-aryo.com`) || Host(`wa-notif.benedict-aryo.com`) || Host(`matius.benedict-aryo.com`)
      kind: Rule
      priority: 10
      middlewares:
        - name: knative-headers
      services:
        - name: kourier
          port: 80
          namespace: kourier-system
  tls:
    secretName: knative-apps-tls
